Added french translation (Nicolas F., Victor Bernoni)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1140 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,5 +1,8 @@
 - Translation glitches https://sourceforge.net/p/nikkhokkho/discussion/fileoptimizer/thread/746b6fa6/ (Nicolas).
 
+- Add below article ads.
+
+
 - Backup de controles y así no tener que reiniciar
 - Aumentar combos y labels
 - No se restaura el memo
@@ -203,7 +206,7 @@ X.XX - YYYY
 - Workarrounded again ImageMagick GIF processing flags as in 11.30 because it is not yet fixed (#26 Dr. Sassafras).
 - Optimized precompiled headers.
 - Added spanish translation (Javier Gutiérrez Chamorro).
-- Added french translation (Victor Bernoni).
+- Added french translation (Nicolas F., Victor Bernoni).
 - Updated TruePNG to 0.6.2.4 (Mike).
 - Updated pngquant to 2.11.4.
 - Updated libwebp to 0.6.1 RC2.
