Updated icons (Nicolas) Fixed hints (Nicolas) Added icons8.com in about box (Nicolas)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1144 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,3 +1,5 @@
+- Delete all INIs and all registry in reset defaults.
+
 - Backup de controles y así no tener que reiniciar
 - Aumentar combos y labels
 - No se restaura el memo
