- Fixed creation of process because some of them like TruePNG do not like to be started in different folders (Hacker). - Completed restore defaults to remove settings from everywhere. - Updated EXEs.
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1145 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,5 +1,3 @@
-- Delete all INIs and all registry in reset defaults.
-
 - Backup de controles y así no tener que reiniciar
 - Aumentar combos y labels
 - No se restaura el memo
@@ -194,6 +192,7 @@ X.XX - YYYY
 - Implemented ability to read options from registry to prevent users changing them in corporate environments. It will never write in the registry nevertheless (srobert698).
 - Made adding files even faster.
 - Hardened buffers in update checker to avoid crashed with certain AV/firewalls (Tom B, Abdulaziz Alnasi).
+- Fixed creation of process because some of them like TruePNG do not like to be started in different folders (Hacker).
 - Allow reading INI options from all users if available.
 - Increased disable plugin mask to 512 characters (olavrb).
 - Made INI parsing stronger against errors.
