--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -154,7 +154,7 @@ ndo
 - Ghostscript 9.22 - http://www.ghostscript.com
 - GNU Strip 2.29.1 - https://sourceforge.net/projects/mingw-w64/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.7.11 - http://www.imagemagick.org
+- ImageMagick 7.0.7.13 - http://www.imagemagick.org
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -210,6 +210,7 @@ X.XX - YYYY
 - Updaded Tidy to 5.6.0.
 - Updated pingo to 0.92k x86 and x64 versions.
 - Updated to mutool 1.12 RC1.
+- Updated ImageMagick to 7.0.7.13 with HDRI support.
 - Some minor optimizations and code cleanup.
 
 
