Compiled with latest C++ Builder 10.2.2 (Tokyo Update 2) Updated EXEs
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1156 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -159,6 +159,7 @@ ndo
 
 X.XX - YYYY
 - Updated libwebp to 0.6.1 (Olav R. Birkeland).
+- Compiled with latest C++ Builder 10.2.2 (Tokyo Update 2).
 
 
 12.00 - 2017/12/08
