Delay load SHCORE.DLL to avoid a runtime bug in Wine < 2 (#25 trlkly)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1157 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -158,6 +158,7 @@ ndo
 
 
 X.XX - YYYY
+- Delay load SHCORE.DLL to avoid a runtime bug in Wine < 2 (#25 trlkly).
 - Updated libwebp to 0.6.1 (Olav R. Birkeland).
 - Compiled with latest C++ Builder 10.2.2 (Tokyo Update 2).
 
