--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -164,6 +164,7 @@ X.XX - YYYY
 - Updated pingo to 0.92m x86 and x64 versions.
 - Updated to mutool 1.12.
 - Updated ffmpeg to 3.4.1.
+- AQtime 8 performance improvements (Armin).
 - Compiled with latest C++ Builder 10.2.2 (Tokyo Update 2).
 
 
