Updated OptiPNG to 0.7.7.
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1173 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -142,7 +142,7 @@ ndo
 - MP3packer 2.04 - http://omion.dyndns.org/mp3packer/mp3packer.html
 - mp4v2 2.1.0 - https://github.com/TechSmith/mp4v2
 - mutool 1.12 - http://mupdf.com/downloads/
-- OptiPNG 0.7.6 - http://optipng.sourceforge.net
+- OptiPNG 0.7.7 - http://optipng.sourceforge.net
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
 - pingo 0.92u - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
@@ -163,6 +163,7 @@ X.XX - YYYY
 - Hopefully fixed refreshing issues (trlkly).
 - Delay load SHCORE.DLL to avoid a runtime bug in Wine < 2 (#25 trlkly).
 - Disabled File system redirection unneded in x64 builds.
+- Updated OptiPNG to 0.7.7.
 - Updated TruePNG to 0.6.2.5.
 - Updated libwebp to 0.6.1 (Olav R. Birkeland).
 - Updated pingo to 0.92u x86 and x64 versions.
