--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -144,7 +144,7 @@ ndo
 - mutool 1.12 - http://mupdf.com/downloads/
 - OptiPNG 0.7.7 - http://optipng.sourceforge.net
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.92u - http://css-ig.net/pingo
+- pingo 0.93 - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.11.4 - http://www.pngquant.org
@@ -166,7 +166,7 @@ X.XX - YYYY
 - Updated OptiPNG to 0.7.7.
 - Updated TruePNG to 0.6.2.5.
 - Updated libwebp to 0.6.1 (Olav R. Birkeland).
-- Updated pingo to 0.92u x86 and x64 versions.
+- Updated pingo to 0.93 x86 and x64 versions.
 - Updated to mutool 1.12.
 - Updated ffmpeg to 3.4.1.
 - Updated ImageMagick to 7.0.7.15 with HDRI support.
