Fixed accidentally left experimental multithreading code that avoids optimization (Alex Devero)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1178 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -160,8 +160,12 @@ ndo
 
 
 X.XX - YYYY
-- Updated ImageMagick to 7.0.7.17 with HDRI support.
 
+
+
+12.11 - 2017/12/28
+- Fixed accidentally left experimental multithreading code that avoids optimization (Alex Devero).
+- Updated ImageMagick to 7.0.7.17 with HDRI support.
 
 12.10 - 2017/12/28
 - Fixed refreshing issues (trlkly).
