- Fixed a regression in getting donator information (Johnson Lam). - Some minor optimizations and code cleanup. - Updated EXEs.
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1180 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -160,7 +160,9 @@ ndo
 
 
 X.XX - YYYY
+- Fixed a regression in getting donator information (Johnson Lam).
 - Fixed formatting of total files in Information window.
+- Some minor optimizations and code cleanup.
 
 
 12.11 - 2017/12/28
