Fixed enabling and disabling ads causing a CPU leak (avalanch).
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1181 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -161,6 +161,7 @@ ndo
 
 X.XX - YYYY
 - Fixed a regression in getting donator information (Johnson Lam).
+- Fixed enabling and disabling ads causing a CPU leak (avalanch).
 - Fixed formatting of total files in Information window.
 - Some minor optimizations and code cleanup.
 
