--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -127,7 +127,7 @@ ndo
 - Ghostscript 9.22 - http://www.ghostscript.com
 - GNU Strip 2.29.1 - https://sourceforge.net/projects/mingw-w64/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.7.17 - http://www.imagemagick.org
+- ImageMagick 7.0.7.19 - http://www.imagemagick.org
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -163,6 +163,7 @@ X.XX - YYYY
 - Fixed a regression in getting donator information (Johnson Lam).
 - Fixed enabling and disabling ads causing a CPU leak (avalanch).
 - Fixed formatting of total files in Information window.
+- Updated ImageMagick to 7.0.7.19 with HDRI support.
 - Some minor optimizations and code cleanup.
 
 
