--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -122,7 +122,7 @@ ndo
 - FLAC 1.3.2 - https://xiph.org/flac/
 - FLACOUT 07/03/2014 - http://advsys.net/ken/utils.htm
 - Flasm 1.62 - http://flasm.sourceforge.net
-- Gifsicle 1.90 - http://www.lcdf.org/gifsicle/
+- Gifsicle 1.91 - http://www.lcdf.org/gifsicle/
 - Gifsicle Lossy 1.88 - https://kornel.ski/lossygif
 - Ghostscript 9.22 - http://www.ghostscript.com
 - GNU Strip 2.29.1 - https://sourceforge.net/projects/mingw-w64/
@@ -163,6 +163,7 @@ X.XX - YYYY
 - Fixed a regression in getting donator information (Johnson Lam).
 - Fixed enabling and disabling ads causing a CPU leak (avalanch).
 - Fixed formatting of total files in Information window.
+- Updated gifsicle to 1.91 (custom build).
 - Updated ImageMagick to 7.0.7.19 with HDRI support.
 - Some minor optimizations and code cleanup.
 
