Upgraded distributions to 7-Zip 18.00
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1187 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -161,6 +161,7 @@ ndo
 
 X.XX - YYYY
 - Added ask to user if he wants to show ads on first execution to avoid flagging it as "Ad Supported" in Softpedia and other channels.
+- Upgraded distributions to 7-Zip 18.00.
 
 
 12.20 - 2018/01/08
