--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -117,7 +117,7 @@ ndo
 - DeflOpt 2.07 - http://www.walbeehm.com/download/
 - defluff 0.3.2 - http://j-o.users.sourceforge.net
 - Document Press Version 6.01 - http://encode.ru/threads/336-Document-Press-6-01
-- ECT 0.8.2 (9290a5cf7ea0) - https://github.com/fhanau/Efficient-Compression-Tool
+- ECT 0.8.2 (50e32cde31e6) - https://github.com/fhanau/Efficient-Compression-Tool
 - ffmpeg 3.4.1 - http://ffmpeg.zeranoe.com/builds/
 - FLAC 1.3.2 - https://xiph.org/flac/
 - FLACOUT 07/03/2014 - http://advsys.net/ken/utils.htm
@@ -161,6 +161,7 @@ ndo
 
 X.XX - YYYY
 - Added ask to user if he wants to show ads on first execution to avoid flagging it as "Ad Supported" in Softpedia and other channels.
+- Updated to ECT 0.8.2 ( 50e32cde31e6) x86 and x64 daily optimized builds (thanks przemoc).
 - Updated ImageMagick to 7.0.7.21 with HDRI support.
 - Updated to cppcheck 1.82.
 - Upgraded distributions to 7-Zip 18.00.
