--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -127,7 +127,7 @@ ndo
 - Ghostscript 9.22 - http://www.ghostscript.com
 - GNU Strip 2.29.1 - https://sourceforge.net/projects/mingw-w64/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.7.21 - http://www.imagemagick.org
+- ImageMagick 7.0.7.22 - http://www.imagemagick.org
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -144,7 +144,7 @@ ndo
 - mutool 1.12 - http://mupdf.com/downloads/
 - OptiPNG 0.7.7 - http://optipng.sourceforge.net
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.95d - http://css-ig.net/pingo
+- pingo 0.95i - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.11.4 - http://www.pngquant.org
@@ -166,8 +166,8 @@ X.XX - YYYY
 - Tested against Google File Stream and Microsoft OneDrive virtual file systems.
 - Updated SQLite to 3.22.0 x86 and x64 Visual C++ 2017 custom builds.
 - Updated to ECT 0.8.2 (50e32cde31e6) x86 and x64 daily optimized builds (thanks przemoc).
-- Updated pingo to 0.95d x86 and x64 versions.
-- Updated ImageMagick to 7.0.7.21 with HDRI support.
+- Updated pingo to 0.95i x86 and x64 versions.
+- Updated ImageMagick to 7.0.7.22 with HDRI support.
 - Updated to cppcheck 1.82.
 - Upgraded distributions to 7-Zip 18.00.
 
