Updated to NSIS 3.03
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1203 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -170,6 +170,7 @@ X.XX - YYYY
 - Updated pingo to 0.95i x86 and x64 versions.
 - Updated ImageMagick to 7.0.7.22 with HDRI support.
 - Updated to cppcheck 1.82.
+- Updated to NSIS 3.03.
 - Upgraded distributions to 7-Zip 18.01.
 
 
