Included dutch translation. Thanks Luc
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1209 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -160,6 +160,7 @@ ndo
 
 
 X.XX - YYYY
+- Included dutch translation. Thanks Luc.
 - Made installer multilanguage.
 - Fixed a regression in 12.30 which caused registry values not being properly read (srobert698).
 
