Implemented Some translation improvements (Luc)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1210 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,3 +1,5 @@
+DONATOR INFORMATION and USAGE STATISTICS are not translated (Luc).
+
 https://sourceforge.net/p/nikkhokkho/tickets/27/
 
 - Move PNG plugins that are expensive in time, to execute only in level 7 or higher.
@@ -162,6 +164,7 @@ ndo
 X.XX - YYYY
 - Included dutch translation. Thanks Luc.
 - Made installer multilanguage.
+- Implemented Some translation improvements (Luc).
 - Fixed a regression in 12.30 which caused registry values not being properly read (srobert698).
 
 
